<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Signup">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@color/blue"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/have_account"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/name" />

    <EditText
        android:id="@+id/editTextTextPersonName5"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingBottom="10dp"
        android:text="@string/email" />

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/password" />

    <EditText
        android:id="@+id/editTextTextPersonName7"
        android:layout_width="340dp"
        android:layout_height="48dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/re_password" />

    <Button
        android:id="@+id/button"
        android:layout_width="340dp"
        android:layout_height="wrap_content"

        android:background="@color/blue"
        android:text="@string/create" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/you_have_an_account" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_in"
            android:textColor="@color/blue"
            />
    </LinearLayout>

</LinearLayout>