<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Login">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@color/blue"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/have_account"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/user_name"
        android:textColor="#676767"

        android:textSize="14sp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/password"
        android:textColor="#676767"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@color/blue"
        android:text="@string/btn_loginfill"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView"
            android:layout_width="145dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/you_don_t_have_an_account"
            android:textColor="#000000"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="53dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/log_in"
            android:textColor="#0277BD"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>